--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "node index.js"
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,16 +19,31 @@
   "homepage": "https://github.com/MarcinGren/SpotifyHistory#readme",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "dotenv": "^6.1.0",
+    "http-server": "^0.11.1",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.4",
+    "mobx": "^5.5.2",
+    "mobx-react": "^5.3.6",
     "node-static": "^0.7.11",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "react-router": "^4.3.1",
+    "request": "^2.88.0",
+    "spotify-web-api-js": "^1.1.1"
   }
 }
