--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "dotenv": "^6.1.0",
     "http-server": "^0.11.1",
+    "spotify-web-api-js": "^1.1.1",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "xmlhttprequest": "^1.8.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -43,7 +45,6 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
-    "request": "^2.88.0",
-    "spotify-web-api-js": "^1.1.1"
+    "request": "^2.88.0"
   }
 }
