--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "css-loader": "^1.0.1",
     "dotenv": "^6.1.0",
     "http-server": "^0.11.1",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "spotify-web-api-js": "^1.1.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
