--- a/package.json
+++ b/package.json
@@ -23,25 +23,30 @@
     "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "css-loader": "^1.0.1",
-    "dotenv": "^6.1.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "http-server": "^0.11.1",
     "node-sass": "^4.10.0",
+    "prettier": "^1.15.2",
+    "prettier-eslint-cli": "^4.7.1",
     "sass-loader": "^7.1.0",
-    "spotify-web-api-js": "^1.1.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.24.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10",
-    "xmlhttprequest": "^1.8.0"
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
@@ -49,6 +54,11 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "spotify-web-api-js": "^1.1.1",
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
