--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "request": "^2.88.0",
     "spotify-web-api-js": "^1.1.1",
     "webpack": "^4.24.0",
