eslint changed to airbnb, clrf -> lf

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "sourceType": "module"
     },
     "extends": [
-        "eslint:recommended",
+        "airbnb",
         "prettier",
         "plugin:react/recommended"
     ],
