--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^16.6.0",
     "request": "^2.88.0",
     "spotify-web-api-js": "^1.1.1",
+    "victory": "^31.1.0",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
