--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier-eslint-cli": "^4.7.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.1",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
