--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "minify": "^4.1.0",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
     "node-static": "^0.7.11",
@@ -55,10 +56,10 @@
     "react-dom": "^16.6.0",
     "request": "^2.88.0",
     "spotify-web-api-js": "^1.1.1",
+    "terser-webpack-plugin": "^1.2.1",
     "victory": "^31.1.0",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
-    "terser-webpack-plugin": "^1.2.1",
     "webpack-dev-middleware": "^3.4.0",
     "xmlhttprequest": "^1.8.0"
   }
