--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier-eslint-cli": "^4.7.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "1.14.1",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
@@ -48,7 +49,6 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "minify": "^4.1.0",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
     "node-static": "^0.7.11",
@@ -56,7 +56,6 @@
     "react-dom": "^16.6.0",
     "request": "^2.88.0",
     "spotify-web-api-js": "^1.1.1",
-    "terser-webpack-plugin": "^1.2.1",
     "victory": "^31.1.0",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
