--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "dayjs": "^1.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "mobx": "^5.5.2",
